package lab1;

public abstract class CheesePizza extends Pizza {
    @Override
    public String[] createToppings() {
        return new String[0];
    }
}
