package lab1;

public abstract class PizzaFactory {
    public abstract CheesePizza createCheesePizza();
    public abstract VeggiePizza createVeggiePizza();
    public abstract HawaiianPizza createHawaiianPizza();
}
